# Course-Helper

./: .env.example  .gitignore  README.md  docker-compose.yml  mise.toml
python-service/: .env.sample  .gitignore  Dockerfile  README.md  celery_config.py  celery_worker.py  docker-compose.yml  example_api_usages.md  main.py  mise.toml  pyproject.toml  requirements.txt  start.sh
python-service/app/agents/graphs/: conversation_graph.py
python-service/app/agents/nodes/: conversation_node.py
python-service/app/agents/states/: conversation_state.py
python-service/app/agents/tools/: docx_vector_retrieval.py  multiply.py  tool_config.py  vector_retrieval.py  video_answerer.py
python-service/app/api/: routes.py
python-service/app/core/: config_settings.py
python-service/app/models/: answer_evaluation.py  conversation.py  enums.py  flash_cards.py  ingestion_retrieval_models.py  request.py  video.py
python-service/app/prompts/: __init__.py  prompt_flash_card_generation.py  prompt_moodle_answer_question.py  prompt_moodle_generate_quiz.py  prompt_moodle_summarise_question.py  prompt_summarisation_image.py  prompt_summarisation_text_table.py
python-service/app/services/: deletion_service.py  flash_card_service.py  ingestion_service.py  moodle_service.py  parser_service.py  provider_service.py  summarisation_service.py
python-service/app/utils/: build_moodle_prompt_util.py  conversation_util.py  convert_docx_to_pdf_util.py  model_config_util.py  qdrant_vector_database_util.py  time_util.py
python-service/original_files_for_patching/: _api_client.py  files.py
(+104 files in other folders)
